--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <title>Lina_CSE3_Act5_Spotify</title>
+    <title>Spotify Homepage UI Clone</title>
 </head>
 <body>
     <div class="one">
-        <a href="Lina_CSE3_Act5.html"><i class='bx bxs-home' style="color: #fff;"><span>Home</span></i></a>
+        <a href="index.html"><i class='bx bxs-home' style="color: #fff;"><span>Home</span></i></a>
         <a href=""><i class='bx bx-search' id="search"><span>Search</span></i></a>
     </div>
     <div class="two">
